--- a/src/index.scss
+++ b/src/index.scss
@@ -108,14 +108,28 @@
 
   tbody {
     background-color: white;
+
+    tr {
+      &:hover {
+        td {
+          .side-controls-block {
+            display: block;
+          }
+        }
+      }
+    }
+
     td {
       padding-top: 5px;
       padding-bottom: 5px;
       padding-left: 5px;
 
       .side-controls-block {
+        width: 120px;
+        padding-right: 10px;
+        display: none;
         position: absolute;
-        margin-left: -120px;
+        margin-left: -125px;
         margin-top: -25px;
         text-align: right;
 
@@ -136,14 +150,14 @@
 .palette {
   position: fixed;
 
-  width: 300px;
-  height: 300px;
+  width: 100px;
+  height: 100px;
   z-index: 1000;
 
   .opt{
-    width: 150px;
+    width: 50px;
     cursor: pointer;
-    height: 75px;
+    height: 25px;
     float: left;
     border: 1px solid black;
   }
@@ -179,9 +193,10 @@
       padding: 5px 5px 5px 5px;
     }
 
-    input {
+    textarea {
       width: 70%;
       margin-right: 30px;
+      min-height: 37px;
     }
 
     button {
@@ -190,6 +205,7 @@
       padding: 2px 30px 2px 30px;
       border: 1px solid black;
       border-radius: 10px;
+      position: absolute;
     }
   }
 
