--- a/src/index.scss
+++ b/src/index.scss
@@ -66,11 +66,22 @@
 
 
   }
+
+  .left-block {
+    float: left;
+    margin-left: 30px;  
+
+    a {
+      color: blue;
+      text-decoration: underline;
+    }
+  }
 }
 
 .add-client-form {
   width: 100%;
   padding-bottom: 40px;
+  justify-content: space-between;
 
   input {
     margin-right: 10px;
@@ -95,24 +106,38 @@
   border: 1px solid gray;
 
   thead {
-    background-color: #E5E5E5;
     font-weight: 600;
     text-align: center;
     
     td {
-      padding-top: 5px;
-      padding-bottom: 5px;
+      padding-top: 10px;
+      padding-bottom: 10px;
     }
   }
 
   tbody {
     background-color: white;
+    cursor: pointer;
 
     tr {
+      td:first-child {
+        padding-left: 5px;
+        padding-right: 5px;
+        text-align: right;
+        width: 120px !important;
+        background-color: white !important;
+        padding: 0px;
+        padding-top: 5px;
+      }
+
+      .act {
+        opacity: 1 !important;
+      }
+
       &:hover {
         td {
           .side-controls-block {
-            display: block;
+            opacity: 1;
           }
         }
       }
@@ -126,10 +151,11 @@
       .side-controls-block {
         width: 120px;
         padding-right: 10px;
-        display: none;
-        position: absolute;
-        margin-left: -125px;
-        margin-top: -25px;
+        float: right;
+        opacity: 0;
+        // position: absolute;
+        // margin-left: -125px;
+        // margin-top: -25px;
         text-align: right;
 
         i {
@@ -190,10 +216,11 @@
   .new-action-form {
     width: 100%;
     padding-top: 30px;
+    padding-left: 5px;
+    justify-content: space-between;
 
     input[type=date] {
-      width: 10%;
-      min-width: 135px;
+      width: 180px;
       margin-right: 30px;
       padding: 5px 5px 5px 5px;
     }
